# azure-databricks-jobs-mcp-server

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  Dockerfile  README.md  dual-authentication-spec.md  pyproject.toml
src/databricks_jobs_mcp/: auth.py  config.py  databricks_client.py  server.py  tools.py
