[project]
name = "databricks-jobs-mcp"
version = "0.1.0"
description = "MCP server exposing Azure Databricks Jobs capabilities, authenticated via Entra ID On-Behalf-Of"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13",
    "msal>=1.31",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "azure-identity>=1.19",
]

[project.scripts]
databricks-jobs-mcp = "databricks_jobs_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_jobs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
